--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,5 +3,5 @@ uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 matplotlib==3.10.0
 opencv-python==4.12.0.88
-#pillow==10.0.1
-#numpy==1.24.3
+websockets==12.0
+pydantic==2.5.0
